# Agent_resume_matchmaker

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  environment.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260308_0001_init_auth_and_sessions.py
backend/app/: database.py  db_models.py  main.py  models.py  routes.py  security.py
backend/app/services/: jd_parser.py  matcher.py  resume_parser.py  suggestions.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agent/[agentId]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/app/scan/: page.tsx
frontend/app/scan/results/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Accordion.tsx  AgentForm.tsx  AppShell.tsx  AuthHeaderActions.tsx  Header.tsx  MatchButton.tsx  MatchMeter.tsx  MatchResult.tsx  SkillBadge.tsx
frontend/lib/: scanSession.ts
